--- a/selector.css
+++ b/selector.css
@@ -1,10 +1,15 @@
+html, body {
+    height: 250px;
+    width: 250px;
+}
 .selected {
     background-color: #3f3f3f;
 }
 .emote {
-    width: 36px; 
-    height: 36px; 
-    padding: 2px; 
+    width: 40px; 
+    height: 40px; 
+    padding: 4px;
+    
     cursor: pointer;
 }
 .emote:hover {
